three more papers

--- a/paper.bib
+++ b/paper.bib
@@ -7,3 +7,15 @@
 	Title = {egonw/bacting: Bacting 0.0.11},
 	Year = {2020}
 }
+
+@article{bioclipse1,
+  title={Bioclipse: an open source workbench for chemo- and bioinformatics}, volume={8}, ISSN={1471-2105}, DOI={10.1186/1471-2105-8-59}, abstractNote={There is a need for software applications that provide users with a complete and extensible toolkit for chemo- and bioinformatics accessible from a single workbench. Commercial packages are expensive and closed source, hence they do not allow end users to modify algorithms and add custom functionality. Existing open source projects are more focused on providing a framework for integrating existing, separately installed bioinformatics packages, rather than providing user-friendly interfaces. No open source chemoinformatics workbench has previously been published, and no sucessful attempts have been made to integrate chemo- and bioinformatics into a single framework.}, number={1}, journal={BMC Bioinformatics}, author={Spjuth, Ola and Helmus, Tobias and Willighagen, Egon L. and Kuhn, Stefan and Eklund, Martin and Wagener, Johannes and Murray-Rust, Peter and Steinbeck, Christoph and Wikberg, Jarl E.}, year={2007}, month={Feb}, pages={59+}
+}
+
+@article{bioclipse2,
+  title={Bioclipse 2: A scriptable integration platform for the life sciences}, volume={10}, ISSN={1471-2105}, DOI={10.1186/1471-2105-10-397}, number={1}, journal={BMC Bioinformatics}, author={Spjuth, Ola and Alvarsson, Jonathan and Berg, Arvid and Eklund, Martin and Kuhn, Stefan and Mäsak, Carl and Torrance, Gilleain and Wagener, Johannes and Willighagen, Egon L and Steinbeck, Christoph and et al.}, year={2009}, pages={397}
+}
+
+@article{Willighagen2017,
+  title={The Chemistry Development Kit (CDK) v2.0: atom typing, depiction, molecular formulas, and substructure searching}, volume={9}, ISSN={1758-2946}, url={http://jcheminf.springeropen.com/articles/10.1186/s13321-017-0220-4}, DOI={10.1186/s13321-017-0220-4}, number={1}, journal={Journal of Cheminformatics}, author={Willighagen, Egon L. and Mayfield, John W. and Alvarsson, Jonathan and Berg, Arvid and Carlsson, Lars and Jeliazkova, Nina and Kuhn, Stefan and Pluskal, Tomáš and Rojas-Chertó, Miquel and Spjuth, Ola and et al.}, year={2017}, month={Dec}
+}
