--- a/paper.bib
+++ b/paper.bib
@@ -19,3 +19,7 @@
 @article{Willighagen2017,
   title={The Chemistry Development Kit (CDK) v2.0: atom typing, depiction, molecular formulas, and substructure searching}, volume={9}, ISSN={1758-2946}, url={http://jcheminf.springeropen.com/articles/10.1186/s13321-017-0220-4}, DOI={10.1186/s13321-017-0220-4}, number={1}, journal={Journal of Cheminformatics}, author={Willighagen, Egon L. and Mayfield, John W. and Alvarsson, Jonathan and Berg, Arvid and Carlsson, Lars and Jeliazkova, Nina and Kuhn, Stefan and Pluskal, Tomáš and Rojas-Chertó, Miquel and Spjuth, Ola and et al.}, year={2017}, month={Dec}
 }
+
+@article{Lowe2011,
+  title={Chemical name to structure: OPSIN, an open source solution.}, volume={51}, ISSN={1549-960X}, DOI={10.1021/ci100384d}, abstractNote={We have produced an open source, freely available, algorithm (Open Parser for Systematic IUPAC Nomenclature, OPSIN) that interprets the majority of organic chemical nomenclature in a fast and precise manner. This has been achieved using an approach based on a regular grammar. This grammar is used to guide tokenization, a potentially difficult problem in chemical names. From the parsed chemical name, an XML parse tree is constructed that is operated on in a stepwise manner until the structure has been reconstructed from the name. Results from OPSIN on various computer generated name/structure pair sets are presented. These show exceptionally high precision (99.8%+) and, when using general organic chemical nomenclature, high recall (98.7-99.2%). This software can serve as the basis for future open source developments of chemical name interpretation.}, number={3}, journal={Journal of Chemical Information and Modeling}, author={Lowe, Daniel M. and Corbett, Peter T. and Murray-Rust, Peter and Glen, Robert C.}, year={2011}, month={Mar}, pages={739–753}
+}
