--- a/paper.bib
+++ b/paper.bib
@@ -23,3 +23,23 @@
 @article{Lowe2011,
   title={Chemical name to structure: OPSIN, an open source solution.}, volume={51}, ISSN={1549-960X}, DOI={10.1021/ci100384d}, abstractNote={We have produced an open source, freely available, algorithm (Open Parser for Systematic IUPAC Nomenclature, OPSIN) that interprets the majority of organic chemical nomenclature in a fast and precise manner. This has been achieved using an approach based on a regular grammar. This grammar is used to guide tokenization, a potentially difficult problem in chemical names. From the parsed chemical name, an XML parse tree is constructed that is operated on in a stepwise manner until the structure has been reconstructed from the name. Results from OPSIN on various computer generated name/structure pair sets are presented. These show exceptionally high precision (99.8%+) and, when using general organic chemical nomenclature, high recall (98.7-99.2%). This software can serve as the basis for future open source developments of chemical name interpretation.}, number={3}, journal={Journal of Chemical Information and Modeling}, author={Lowe, Daniel M. and Corbett, Peter T. and Murray-Rust, Peter and Glen, Robert C.}, year={2011}, month={Mar}, pages={739–753}
 }
+
+@article{vanIersel2010,
+  title={The BridgeDb framework: standardized access to gene, protein and metabolite identifier mapping services}, volume={11}, ISSN={1471-2105}, DOI={10.1186/1471-2105-11-5}, abstractNote={Many complementary solutions are available for the identifier mapping problem. This creates an opportunity for bioinformatics tool developers. Tools can be made to flexibly support multiple mapping services or mapping services could be combined to get broader coverage. This approach requires an interface layer between tools and mapping services. Here we present BridgeDb, a software framework for gene, protein and metabolite identifier mapping. This framework provides a standardized interface layer through which bioinformatics tools can be connected to different identifier mapping services. This approach makes it easier for tool developers to support identifier mapping. Mapping services can be combined or merged to support multi-omics experiments or to integrate custom microarray annotations. BridgeDb provides its own ready-to-go mapping services, both in webservice and local database forms. However, the framework is intended for customization and adaptation to any identifier mapping service. BridgeDb has already been integrated into several bioinformatics applications. By uncoupling bioinformatics tools from mapping services, BridgeDb improves capability and flexibility of those tools. All described software is open source and available at http://www.bridgedb.org.}, number={1}, journal={BMC Bioinformatics}, author={van Iersel, Martijn P. and Pico, Alexander R. and Kelder, Thomas and Gao, Jianjiong and Ho, Isaac and Hanspers, Kristina and Conklin, Bruce R. and Evelo, Chris T.}, year={2010}, month={Jan}, pages={5+}
+}
+
+@article{Spjuth2013,
+  title={Applications of the InChI in cheminformatics with the CDK and Bioclipse}, volume={5}, ISSN={1758-2946}, DOI={10.1186/1758-2946-5-14}, number={1}, journal={Journal of Cheminformatics}, author={Spjuth, Ola and Berg, Arvid and Adams, Samuel and Willighagen, Egon L}, year={2013}, pages={14}
+}
+
+@article{vanRijswijk2017,
+  title={The future of metabolomics in ELIXIR}, volume={6}, ISSN={2046-1402}, DOI={10.12688/f1000research.12342.1}, journal={F1000Research}, author={van Rijswijk, Merlijn and Beirnaert, Charlie and Caron, Christophe and Cascante, Marta and Dominguez, Victoria and Dunn, Warwick B. and Ebbels, Timothy M. D. and Giacomoni, Franck and Gonzalez-Beltran, Alejandra and Hankemeier, Thomas and et al.}, year={2017}, month={Sep}, pages={1649}
+}
+
+@article{Slenter2018,
+  title={WikiPathways: a multifaceted pathway database bridging metabolomics to other omics research}, volume={46}, ISSN={0305-1048, 1362-4962}, DOI={10.1093/nar/gkx1064}, number={D1}, journal={Nucleic Acids Research}, author={Slenter, Denise N. and Kutmon, Martina and Hanspers, Kristina and Riutta, Anders and Windsor, Jacob and Nunes, Nuno and Mélius, Jonathan and Cirillo, Elisa and Coort, Susan L. and Digles, Daniela and et al.}, year={2018}, month={Jan}, pages={D661–D667}
+}
+
+@article{Willighagen2018,
+  title={Wikidata and Scholia as a hub linking chemical knowledge}, DOI={10.6084/m9.figshare.6356027.v1}, abstractNote={Poster presented at the 11th International Conference on Chemical Structures, May 27-31 2018, Noordwijkerhout, The Netherlands.}, journal={Figshare}, author={Willighagen, Egon and Slenter, Denise and Mietchen, Daniel and Evelo, Chris and Nielsen, Finn}, year={2018}, pages={690551 Bytes}
+}
