--- a/paper.bib
+++ b/paper.bib
@@ -43,3 +43,17 @@
 @article{Willighagen2018,
   title={Wikidata and Scholia as a hub linking chemical knowledge}, DOI={10.6084/m9.figshare.6356027.v1}, abstractNote={Poster presented at the 11th International Conference on Chemical Structures, May 27-31 2018, Noordwijkerhout, The Netherlands.}, journal={Figshare}, author={Willighagen, Egon and Slenter, Denise and Mietchen, Daniel and Evelo, Chris and Nielsen, Finn}, year={2018}, pages={690551 Bytes}
 }
+
+@inbook{Nielsen2017,
+  place={Cham}, series={Lecture Notes in Computer Science}, title={Scholia, Scientometrics and Wikidata}, volume={10577}, ISBN={978-3-319-70406-7}, url={http://link.springer.com/10.1007/978-3-319-70407-4_36}, DOI={10.1007/978-3-319-70407-4_36}, booktitle={The Semantic Web: ESWC 2017 Satellite Events}, publisher={Springer International Publishing}, author={Nielsen, Finn Årup and Mietchen, Daniel and Willighagen, Egon}, editor={Blomqvist, Eva and Hose, Katja and Paulheim, Heiko and Ławrynowicz, Agnieszka and Ciravegna, Fabio and Hartig, Olaf}, year={2017}, pages={237–259}, collection={Lecture Notes in Computer Science}
+}
+
+@article{Mayfield2019,
+  title={cdk/cdk: CDK 2.3}, url={https://zenodo.org/record/3364510}, DOI={10.5281/ZENODO.3364510}, abstractNote={The Chemistry Development Kit}, publisher={Zenodo}, author={Mayfield, John and Willighagen, Egon and Rajarshi Guha and Gilleain Torrance and Ujihara, Kazuya and Rahman, Syed Asad and Alvarsson, Jonathan and Vine, Mark B and Gražulis, Saulius and Tomáš Pluskal and et al.}, year={2019}, month={Aug}
+}
+
+@article{Brenninkmeijer2020,
+  title={bridgedb/BridgeDb: BridgeDb 2.3.8}, url={https://zenodo.org/record/3855084}, DOI={10.5281/ZENODO.3855084}, abstractNote={This minor release adds Guide to Pharmacology Targets as identifier sources. The below examples assume you need just <code>org.bridgedb.bio</code>, and you can use it as template and modify to add other modules. For Maven: <pre><code class="lang-xml">&lt;dependencies&gt; &lt;dependency&gt; &lt;groupId&gt;org.bridgedb&lt;/groupId&gt; &lt;artifactId&gt;org.bridgedb.bio&lt;/artifactId&gt; &lt;version&gt;2.3.8&lt;/version&gt; &lt;/dependency&gt; &lt;/dependencies&gt; </code></pre> For Gradle: <pre><code class="lang-gradle">compile group: “org.bridgedb”, name: “org.bridgedb.bio”, version: “2.3.8” </code></pre> For Ivy: <pre><code class="lang-xml">&lt;dependency org="org.bridgedb" name="org.bridgedb.bio" rev="2.3.8"/&gt; </code></pre> For Buildr: <pre><code class="lang-buildr">’org.bridgedb:org.bridgedb.bio:jar:2.3.8’ </code></pre>}, publisher={Zenodo}, author={Brenninkmeijer, Christian Y. and Willighagen, Egon and Manas Awasthi and Soiland-Reyes, Stian and Riutta, Anders and Pico, Alexander and Dunlop, Ian and Nunogit and Kerber, Randy and De and et al.}, year={2020}, month={May}
+}
+
+
