--- a/paper.bib
+++ b/paper.bib
@@ -56,4 +56,7 @@
   title={bridgedb/BridgeDb: BridgeDb 2.3.8}, url={https://zenodo.org/record/3855084}, DOI={10.5281/ZENODO.3855084}, abstractNote={This minor release adds Guide to Pharmacology Targets as identifier sources. The below examples assume you need just <code>org.bridgedb.bio</code>, and you can use it as template and modify to add other modules. For Maven: <pre><code class="lang-xml">&lt;dependencies&gt; &lt;dependency&gt; &lt;groupId&gt;org.bridgedb&lt;/groupId&gt; &lt;artifactId&gt;org.bridgedb.bio&lt;/artifactId&gt; &lt;version&gt;2.3.8&lt;/version&gt; &lt;/dependency&gt; &lt;/dependencies&gt; </code></pre> For Gradle: <pre><code class="lang-gradle">compile group: “org.bridgedb”, name: “org.bridgedb.bio”, version: “2.3.8” </code></pre> For Ivy: <pre><code class="lang-xml">&lt;dependency org="org.bridgedb" name="org.bridgedb.bio" rev="2.3.8"/&gt; </code></pre> For Buildr: <pre><code class="lang-buildr">’org.bridgedb:org.bridgedb.bio:jar:2.3.8’ </code></pre>}, publisher={Zenodo}, author={Brenninkmeijer, Christian Y. and Willighagen, Egon and Manas Awasthi and Soiland-Reyes, Stian and Riutta, Anders and Pico, Alexander and Dunlop, Ian and Nunogit and Kerber, Randy and De and et al.}, year={2020}, month={May}
 }
 
+@article{Afantitis2020,
+  title={NanoSolveIT Project: Driving Nanoinformatics research to develop innovative and integrated tools for in silico nanosafety assessment}, ISSN={20010370}, DOI={10.1016/j.csbj.2020.02.023}, journal={Computational and Structural Biotechnology Journal}, author={Afantitis, Antreas and Melagraki, Georgia and Isigonis, Panagiotis and Tsoumanis, Andreas and Danai Varsou, Dimitra and Valsami-Jones, Eugenia and Papadiamantis, Anastasios and Ellis, Laura-Jayne.A and Sarimveis, Haralambos and Doganis, Philip and et al.}, year={2020}, month={Mar}, pages={S2001037019305112}
+}
 
