--- a/paper.bib
+++ b/paper.bib
@@ -60,3 +60,6 @@
   title={NanoSolveIT Project: Driving Nanoinformatics research to develop innovative and integrated tools for in silico nanosafety assessment}, ISSN={20010370}, DOI={10.1016/j.csbj.2020.02.023}, journal={Computational and Structural Biotechnology Journal}, author={Afantitis, Antreas and Melagraki, Georgia and Isigonis, Panagiotis and Tsoumanis, Andreas and Danai Varsou, Dimitra and Valsami-Jones, Eugenia and Papadiamantis, Anastasios and Ellis, Laura-Jayne.A and Sarimveis, Haralambos and Doganis, Philip and et al.}, year={2020}, month={Mar}, pages={S2001037019305112}
 }
 
+@misc{Willighagen2020,
+  title={Metabolite BridgeDb ID Mapping Database (20200610)}, url={https://figshare.com/articles/Metabolite_BridgeDb_ID_Mapping_Database_20200610_/12458612}, DOI={10.6084/M9.FIGSHARE.12458612}, abstractNote={BridgeDb ID mapping database for metabolites, using HMDB 4.0 (Release of April 2020), ChEBI 186 (Release of April 2020), and Wikidata (10 June 2020) as data sources.}, publisher={figshare}, author={Willighagen, Egon}, year={2020}, pages={1700099078 Bytes}
+}
