--- a/paper.bib
+++ b/paper.bib
@@ -63,3 +63,8 @@
 @misc{Willighagen2020,
   title={Metabolite BridgeDb ID Mapping Database (20200610)}, url={https://figshare.com/articles/Metabolite_BridgeDb_ID_Mapping_Database_20200610_/12458612}, DOI={10.6084/M9.FIGSHARE.12458612}, abstractNote={BridgeDb ID mapping database for metabolites, using HMDB 4.0 (Release of April 2020), ChEBI 186 (Release of April 2020), and Wikidata (10 June 2020) as data sources.}, publisher={figshare}, author={Willighagen, Egon}, year={2020}, pages={1700099078 Bytes}
 }
+
+@article{Hastings2015,
+  title={eNanoMapper: harnessing ontologies to enable data integration for nanomaterial risk assessment}, volume={6}, ISSN={2041-1480}, url={http://www.jbiomedsem.com/content/6/1/10}, DOI={10.1186/s13326-015-0005-5}, number={1}, journal={Journal of Biomedical Semantics}, author={Hastings, Janna and Jeliazkova, Nina and Owen, Gareth and Tsiliki, Georgia and Munteanu, Cristian R and Steinbeck, Christoph and Willighagen, Egon}, year={2015}, month={Dec}
+}
+
